add the possibility to have a property file for all classes by not change te actual behavior; adjust test classes to work with not english locale and not linux systems